# lib-communication

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: connection.md  mqtt_connection.md
inc/: connection.h  connection_manager.h  mqtt_connection.h  paho_connection_manager.h  paho_mqtt_connection.hpp  ws_connection.h
src/: connection.cpp  connection_manager.cpp  mqtt_connection.cpp  paho_connection_manager.cpp  paho_mqtt_connection.cpp  ws_connection.cpp
test/: main.cpp  paho_test.cpp  paho_weak_pointer.cpp  pubber.cpp  subber.cpp
